Final Project Deployment

--- a/crud1/Views/Contacts/Index.cshtml
+++ b/crud1/Views/Contacts/Index.cshtml
@@ -9,99 +9,79 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Phoneprimary)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneSecondary)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StreetAddress1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StreetAddress2)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.State)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Zip)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Birthday)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phoneprimary)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneSecondary)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StreetAddress1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StreetAddress2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.State)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Zip)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Birthday)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
+<table id="your_contacts" class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+            <th>@Html.DisplayNameFor(model => model.LastName)</th>
+            <th>@Html.DisplayNameFor(model => model.Email)</th>
+            <th>@Html.DisplayNameFor(model => model.Phoneprimary)</th>
+            <th>@Html.DisplayNameFor(model => model.PhoneSecondary)</th>
+            <th>@Html.DisplayNameFor(model => model.Birthday)</th>
+            <th>@Html.DisplayNameFor(model => model.StreetAddress1)</th>
+            <th>@Html.DisplayNameFor(model => model.StreetAddress2)</th>
+            <th>@Html.DisplayNameFor(model => model.City)</th>
+            <th>@Html.DisplayNameFor(model => model.State)</th>
+            <th>@Html.DisplayNameFor(model => model.Zip)</th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
+                <td>@Html.DisplayFor(modelItem => item.LastName)</td>
+                <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                <td>@Html.DisplayFor(modelItem => item.Phoneprimary)</td>
+                <td>@Html.DisplayFor(modelItem => item.PhoneSecondary)</td>
+                <td>@Html.DisplayFor(modelItem => item.Birthday)</td>
+                <td>@Html.DisplayFor(modelItem => item.StreetAddress1)</td>
+                <td>@Html.DisplayFor(modelItem => item.StreetAddress2)</td>
+                <td>@Html.DisplayFor(modelItem => item.City)</td>
+                <td>@Html.DisplayFor(modelItem => item.State)</td>
+                <td>@Html.DisplayFor(modelItem => item.Zip)</td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+                <td>@Html.HiddenFor(modelItem => item.UserId)</td>
+            </tr>
+        }
+    </tbody>
 </table>
 
-@*<h4>
-    Welcome
-</h4>
-@ViewBag.UserName-@ViewBag.UserId
+@section Scripts
+{
+   <script type="text/javascript">
+       $(function () {
+           $("#your_contacts").dataTable({
+               "pagingType": "full_numbers"
+                       , "scrollY": "600px"
+                       , "columnDefs": [
+                           { "width": "45px", "targets": 0 }
+                           , { "width": "45px", "targets": 1 }
+                           , { "width": "45px", "targets": 2 }
+                           , { "width": "45px", "targets": 3 }
+                           , { "width": "45px", "targets": 4 }
+                           , { "width": "45px", "targets": 5 }
+                           , { "width": "45px", "targets": 6 }
+                           , { "width": "45px", "targets": 7 }
+                           , { "width": "45px", "targets": 8 }
+                           , { "width": "45px", "targets": 9 }
+                           , { "width": "45px", "targets": 10 }
+                           , { "width": "45px", "targets": 11 }
+                           , { "width": "45px", "targets": 12 }
+                       ]
+                       , "order": [[1, "desc"]]
+                       , "dom": 'Rlfrtip'
+                       , "stateSave": "true"
+                       , "lengthMenu": [[-1, 10, 20, 50, 100], ["All", 10, 20, 50, 100]]
+           });
+       });
+</script>
 
-<h3>Welcome</h3>
-@ViewData["UserName"]-@ViewData["UserId"]*@
+}
