--- a/crud1/Views/Home/About.cshtml
+++ b/crud1/Views/Home/About.cshtml
@@ -2,6 +2,14 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h4>More about this project.</h4>
 
-<p>Made by Vinayak sharma</p>
+<p>
+    A basic CRUD web application using ASP.Net MVC, the Entity Framework (code-first development approach), and the built-in scaffolding capabilities of ASP.Net MVC.
+
+    MVC = Model, View, Controller, and is a well-known and established design pattern.</p><p> Microsoft has made it extremely easy and convenient to create your web solutions using this pattern.
+    In Microsoft's MVC framework, we find that convention is favored over configuration, so as long as we follow a few simple guidelines.
+    </p><p>I have used the Entity Framework to easily model and create a database for the application. By using the code-first approach, I have simply created models and then look at writing a DBContext to store the models. I also created an initializer class which will see our database for the project.
+    moreover I haveput DataTables.js on our Index view so that we can easily show the data, as well as provide built-in javascript tools that will filter and sort the data for us.
+</p>
+
