--- a/crud1/Views/Contacts/Delete.cshtml
+++ b/crud1/Views/Contacts/Delete.cshtml
@@ -1,24 +1,17 @@
 ﻿@model crud1.Models.Contact
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Contact";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Contact</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
+        
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
