--- a/crud1/Views/Contacts/Details.cshtml
+++ b/crud1/Views/Contacts/Details.cshtml
@@ -1,23 +1,16 @@
 ﻿@model crud1.Models.Contact
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Contact Details";
 }
 
-<h2>Details</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
     <h4>Contact</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
+        
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
