--- a/crud1/Views/Contacts/Edit.cshtml
+++ b/crud1/Views/Contacts/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model crud1.Models.Contact
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Contact";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm())
@@ -18,11 +18,9 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-            </div>
+                @Html.HiddenFor(model => model.UserId, new { id = "UserId", Value = ViewBag.UserId })
+                </div>
         </div>
 
         <div class="form-group">
@@ -108,7 +106,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "form-control needsDatePicker" } })
                 @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -126,5 +124,9 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        $(function () {
+            $(".needsDatePicker").datepicker();
+        });
+    </script>
 }
