--- a/crud1/Views/Home/Contact.cshtml
+++ b/crud1/Views/Home/Contact.cshtml
@@ -2,16 +2,11 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Contact me</h3>
 
+<p>To Find more about me contact me here</p>
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    
+    <strong>LinkedIn</strong> <a href="https://linkedin.com/in/vinayak-sharma-2ab488142">Conect via LinkedIn</a>
+   
 </address>
