--- a/crud1/Views/Home/Index.cshtml
+++ b/crud1/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Vinayak Sharma</h1>
     <p class="lead">Portfolio coming soon.....</p>
-    <p><a href="linkedin.com/in/vinayak-sharma-2ab488142" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://linkedin.com/in/vinayak-sharma-2ab488142" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
